--- a/template/header.html
+++ b/template/header.html
@@ -1,6 +1,6 @@
 <div id='header_menu'>
     <div class='logo'>
-        <a href="/SCE1920/index.html"><img src='utils/img/logo.png' alt="logo du jeu"></a>
+        <a href="/index.html"><img src='utils/img/logo.png' alt="logo du jeu"></a>
     </div>
 
     <div id='navbar'>
@@ -10,11 +10,11 @@
         </div>
 
         <div id='nav'>
-            <a href="/SCE1920/introduction.html" id="lien_intro">Intro</a>
-            <a href="/SCE1920/personnages.html" id="lien_perso">Heros</a>
-            <a href="/SCE1920/boss.html" id="lien_boss">Mechants</a>
-            <a href="/SCE1920/objets.html" id="lien_objets">Objets</a>
-            <a href="/SCE1920/sortileges.html" id="lien_sorts">Sorts</a>
+            <a href="/introduction.html" id="lien_intro">Intro</a>
+            <a href="/personnages.html" id="lien_perso">Heros</a>
+            <a href="/boss.html" id="lien_boss">Mechants</a>
+            <a href="/objets.html" id="lien_objets">Objets</a>
+            <a href="/sortileges.html" id="lien_sorts">Sorts</a>
         </div>
     </div>
 </div>
